# ducky-relay

./: .gitignore  Cargo.toml  PKGBUILD  README.md  config.example.toml  justfile
src/: keystroke_varlink.rs  lib.rs
systemd/: 99-duckypad.rules  duckycap-varlink.service  duckycap-varlink.socket  duckycap.service
varlink/: io.ducky.Keystroke.varlink
